@@ -42,12 +42,14 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.ServiceLoader;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -85,125 +87,33 @@ public class ExtensionLoader<T> {
 
     private static final Pattern NAME_SEPARATOR = Pattern.compile("\\s*[,]+\\s*");
 
-    /**
-     * 拓展加载器集合
-     *
-     * key：拓展接口
-     */
     private static final ConcurrentMap<Class<?>, ExtensionLoader<?>> EXTENSION_LOADERS = new ConcurrentHashMap<>(64);
 
-    /**
-     * 拓展实现类集合
-     *
-     * key：拓展实现类
-     * value：拓展对象。
-     *
-     * 例如，key 为 Class<AccessLogFilter>
-     *  value 为 AccessLogFilter 对象
-     */
     private static final ConcurrentMap<Class<?>, Object> EXTENSION_INSTANCES = new ConcurrentHashMap<>(64);
 
-    /**
-     * 拓展接口。
-     * 例如，Protocol
-     */
     private final Class<?> type;
 
-    /**
-     * 对象工厂
-     *
-     * 用于调用 {@link #injectExtension(Object)} 方法，向拓展对象注入依赖属性。
-     *
-     * 例如，StubProxyFactoryWrapper 中有 `Protocol protocol` 属性。
-     */
     private final ExtensionFactory objectFactory;
 
-    /**
-     * 缓存的拓展名与拓展类的映射。
-     *
-     * 和 {@link #cachedClasses} 的 KV 对调。
-     *
-     * 通过 {@link #loadExtensionClasses} 加载
-     */
     private final ConcurrentMap<Class<?>, String> cachedNames = new ConcurrentHashMap<>();
 
-    /**
-     * 缓存的拓展实现类集合。
-     *
-     * 不包含如下两种类型：
-     *  1. 自适应拓展实现类。例如 AdaptiveExtensionFactory
-     *  2. 带唯一参数为拓展接口的构造方法的实现类，或者说拓展 Wrapper 实现类。例如，ProtocolFilterWrapper 。
-     *   拓展 Wrapper 实现类，会添加到 {@link #cachedWrapperClasses} 中
-     *
-     * 通过 {@link #loadExtensionClasses} 加载
-     */
     private final Holder<Map<String, Class<?>>> cachedClasses = new Holder<>();
 
-    /**
-     * 拓展名与 @Activate 的映射
-     *
-     * 例如，AccessLogFilter。
-     *
-     * 用于 {@link #getActivateExtension(URL, String)}
-     */
     private final Map<String, Object> cachedActivates = new ConcurrentHashMap<>();
-
-    /**
-     * 缓存的拓展对象集合
-     *
-     * key：拓展名
-     * value：拓展对象
-     *
-     * 例如，Protocol 拓展
-     *      key：dubbo value：DubboProtocol
-     *      key：injvm value：InjvmProtocol
-     *
-     * 通过 {@link #loadExtensionClasses} 加载
-     */
     private final ConcurrentMap<String, Holder<Object>> cachedInstances = new ConcurrentHashMap<>();
-
-    /**
-     * 缓存的自适应( Adaptive )拓展对象
-     */
     private final Holder<Object> cachedAdaptiveInstance = new Holder<>();
-    /**
-     * 缓存的自适应拓展对象的类
-     *
-     * {@link #getAdaptiveExtensionClass()}
-     */
     private volatile Class<?> cachedAdaptiveClass = null;
-    /**
-      * 缓存的默认拓展名
-      *
-      * 通过 {@link SPI} 注解获得
-      */
     private String cachedDefaultName;
-
-    /**
-     * 创建 {@link #cachedAdaptiveInstance} 时发生的异常。
-     *
-     * 发生异常后，不再创建，参见 {@link #createAdaptiveExtension()}
-     */
     private volatile Throwable createAdaptiveInstanceError;
 
-    /**
-     * 拓展 Wrapper 实现类集合
-     *
-     * 带唯一参数为拓展接口的构造方法的实现类
-     *
-     * 通过 {@link #loadExtensionClasses} 加载
-     */
     private Set<Class<?>> cachedWrapperClasses;
 
-    /**
-     * 拓展名 与 加载对应拓展类发生的异常 的 映射
-     *
-     * key：拓展名
-     * value：异常
-     *
-     * 在 {@link #loadFile(Map, String)} 时，记录
-     */
     private Map<String, IllegalStateException> exceptions = new ConcurrentHashMap<>();
+
+    /**
+     * Record all unacceptable exceptions when using SPI
+     */
+    private Set<String> unacceptableExceptions = new ConcurrentHashSet<>();
 
     private static volatile LoadingStrategy[] strategies = loadLoadingStrategies();
 
@@ -239,7 +149,8 @@ public class ExtensionLoader<T> {
 
     private ExtensionLoader(Class<?> type) {
         this.type = type;
-        objectFactory = (type == ExtensionFactory.class ? null : ExtensionLoader.getExtensionLoader(ExtensionFactory.class).getAdaptiveExtension());
+        objectFactory =
+                (type == ExtensionFactory.class ? null : ExtensionLoader.getExtensionLoader(ExtensionFactory.class).getAdaptiveExtension());
     }
 
     private static <T> boolean withExtensionAnnotation(Class<T> type) {
@@ -251,17 +162,14 @@ public class ExtensionLoader<T> {
         if (type == null) {
             throw new IllegalArgumentException("Extension type == null");
         }
-        // 必须是接口
         if (!type.isInterface()) {
             throw new IllegalArgumentException("Extension type (" + type + ") is not an interface!");
         }
-        // 必须包含 @SPI 注解
         if (!withExtensionAnnotation(type)) {
             throw new IllegalArgumentException("Extension type (" + type +
                     ") is not an extension, because it is NOT annotated with @" + SPI.class.getSimpleName() + "!");
         }
 
-        // 获得接口对应的拓展点加载器
         ExtensionLoader<T> loader = (ExtensionLoader<T>) EXTENSION_LOADERS.get(type);
         if (loader == null) {
             EXTENSION_LOADERS.putIfAbsent(type, new ExtensionLoader<T>(type));
@@ -271,6 +179,7 @@ public class ExtensionLoader<T> {
     }
 
     // For testing purposes only
+    @Deprecated
     public static void resetExtensionLoader(Class type) {
         ExtensionLoader loader = EXTENSION_LOADERS.get(type);
         if (loader != null) {
@@ -284,6 +193,8 @@ public class ExtensionLoader<T> {
         }
     }
 
+    // only for unit test
+    @Deprecated
     public static void destroyAll() {
         EXTENSION_INSTANCES.forEach((_type, instance) -> {
             if (instance instanceof Lifecycle) {
@@ -337,8 +248,6 @@ public class ExtensionLoader<T> {
     /**
      * This is equivalent to {@code getActivateExtension(url, url.getParameter(key).split(","), null)}
      *
-     * 获得符合自动激活条件的拓展对象数组
-     *
      * @param url   url
      * @param key   url parameter key which used to get extension point names
      * @param group group
@@ -346,9 +255,7 @@ public class ExtensionLoader<T> {
      * @see #getActivateExtension(org.apache.dubbo.common.URL, String[], String)
      */
     public List<T> getActivateExtension(URL url, String key, String group) {
-        // 从 Dubbo URL 获得参数值
         String value = url.getParameter(key);
-        // 获得符合自动激活条件的拓展对象数组
         return getActivateExtension(url, StringUtils.isEmpty(value) ? null : COMMA_SPLIT_PATTERN.split(value), group);
     }
 
@@ -363,8 +270,10 @@ public class ExtensionLoader<T> {
      */
     public List<T> getActivateExtension(URL url, String[] values, String group) {
         List<T> activateExtensions = new ArrayList<>();
-        List<String> names = values == null ? new ArrayList<>(0) : asList(values);
-        // 1 判断不存在配置 `"-name"` 。例如，<dubbo:service filter="-default" /> ，代表移除所有默认过滤器。
+        // solve the bug of using @SPI's wrapper method to report a null pointer exception.
+        TreeMap<Class, T> activateExtensionsMap = new TreeMap<>(ActivateComparator.COMPARATOR);
+        Set<String> loadedNames = new HashSet<>();
+        Set<String> names = CollectionUtils.ofSet(values);
         if (!names.contains(REMOVE_VALUE_PREFIX + DEFAULT_KEY)) {
             getExtensionClasses();
             for (Map.Entry<String, Object> entry : cachedActivates.entrySet()) {
@@ -382,31 +291,38 @@ public class ExtensionLoader<T> {
                 } else {
                     continue;
                 }
-                // 2 匹配分组、判断拓展实现类key是否包含在url参数中、是否被移除、判断Activate对应的value是否匹配url中的key、value
                 if (isMatchGroup(group, activateGroup)
                         && !names.contains(name)
                         && !names.contains(REMOVE_VALUE_PREFIX + name)
-                        && isActive(activateValue, url)) {
-                    activateExtensions.add(getExtension(name));
+                        && isActive(activateValue, url)
+                        && !loadedNames.contains(name)) {
+                    activateExtensionsMap.put(getExtensionClass(name), getExtension(name));
+                    loadedNames.add(name);
                 }
             }
-            // 3 排序 根据Activate注解定义的顺序来排序
-            activateExtensions.sort(ActivateComparator.COMPARATOR);
+            if (!activateExtensionsMap.isEmpty()) {
+                activateExtensions.addAll(activateExtensionsMap.values());
+            }
         }
-        // 4 获取所有url中参数值所对应的所有拓展实现（没有Activate标注的）
         List<T> loadedExtensions = new ArrayList<>();
-        for (int i = 0; i < names.size(); i++) {
-            String name = names.get(i);
+        for (String name : names) {
             if (!name.startsWith(REMOVE_VALUE_PREFIX)
                     && !names.contains(REMOVE_VALUE_PREFIX + name)) {
-                if (DEFAULT_KEY.equals(name)) {
-                    if (!loadedExtensions.isEmpty()) {
-                        activateExtensions.addAll(0, loadedExtensions);
-                        loadedExtensions.clear();
+                if (!loadedNames.contains(name)) {
+                    if (DEFAULT_KEY.equals(name)) {
+                        if (!loadedExtensions.isEmpty()) {
+                            activateExtensions.addAll(0, loadedExtensions);
+                            loadedExtensions.clear();
+                        }
+                    } else {
+                        loadedExtensions.add(getExtension(name));
                     }
+                    loadedNames.add(name);
                 } else {
-                    // 获得拓展对象
-                    loadedExtensions.add(getExtension(name));
+                    // If getExtension(name) exists, getExtensionClass(name) must exist, so there is no null pointer processing here.
+                    String simpleName = getExtensionClass(name).getSimpleName();
+                    logger.warn("Catch duplicated filter, ExtensionLoader will ignore one of them. Please check. Filter Name: " + name +
+                            ". Ignored Class Name: " + simpleName);
                 }
             }
         }
@@ -502,26 +418,9 @@ public class ExtensionLoader<T> {
         return cachedAdaptiveInstance.get();
     }
 
-//    public T getPrioritizedExtensionInstance() {
-//        Set<String> supported = getSupportedExtensions();
-//
-//        Set<T> instances = new HashSet<>();
-//        Set<T> prioritized = new HashSet<>();
-//        for (String s : supported) {
-//
-//        }
-//
-//    }
-
     /**
      * Find the extension with the given name. If the specified name is not found, then {@link IllegalStateException}
      * will be thrown.
-     */
-    /**
-     * 返回指定名字的扩展对象。如果指定名字的扩展不存在，则抛异常 {@link IllegalStateException}.
-     *
-     * @param name 拓展名
-     * @return 拓展对象
      */
     @SuppressWarnings("unchecked")
     public T getExtension(String name) {
@@ -533,24 +432,31 @@ public class ExtensionLoader<T> {
             throw new IllegalArgumentException("Extension name == null");
         }
         if ("true".equals(name)) {
-            // 查找 默认的 拓展对象
             return getDefaultExtension();
         }
-        // 从 缓存中 获得对应的拓展对象
         final Holder<Object> holder = getOrCreateHolder(name);
         Object instance = holder.get();
         if (instance == null) {
             synchronized (holder) {
                 instance = holder.get();
-                // 从 缓存中 未获取到，进行创建缓存对象。
                 if (instance == null) {
                     instance = createExtension(name, wrap);
-                    // 设置创建对象到缓存中
                     holder.set(instance);
                 }
             }
         }
         return (T) instance;
+    }
+
+    /**
+     * get the original type.
+     * @param name
+     * @return
+     */
+    public T getOriginalInstance(String name) {
+        getExtension(name);
+        Class<?> clazz = getExtensionClasses().get(name);
+        return (T) EXTENSION_INSTANCES.get(clazz);
     }
 
     /**
@@ -692,7 +598,6 @@ public class ExtensionLoader<T> {
 
     @SuppressWarnings("unchecked")
     public T getAdaptiveExtension() {
-        // 从缓存中，获得自适应拓展对象
         Object instance = cachedAdaptiveInstance.get();
         if (instance == null) {
             if (createAdaptiveInstanceError != null) {
@@ -705,7 +610,6 @@ public class ExtensionLoader<T> {
                 instance = cachedAdaptiveInstance.get();
                 if (instance == null) {
                     try {
-                        // 创建自适应拓展对象
                         instance = createAdaptiveExtension();
                         cachedAdaptiveInstance.set(instance);
                     } catch (Throwable t) {
@@ -720,52 +624,46 @@ public class ExtensionLoader<T> {
     }
 
     private IllegalStateException findException(String name) {
-        for (Map.Entry<String, IllegalStateException> entry : exceptions.entrySet()) {
-            if (entry.getKey().toLowerCase().contains(name.toLowerCase())) {
-                return entry.getValue();
-            }
-        }
         StringBuilder buf = new StringBuilder("No such extension " + type.getName() + " by name " + name);
-
 
         int i = 1;
         for (Map.Entry<String, IllegalStateException> entry : exceptions.entrySet()) {
-            if (i == 1) {
-                buf.append(", possible causes: ");
+            if (entry.getKey().toLowerCase().startsWith(name.toLowerCase())) {
+                if (i == 1) {
+                    buf.append(", possible causes: ");
+                }
+                buf.append("\r\n(");
+                buf.append(i++);
+                buf.append(") ");
+                buf.append(entry.getKey());
+                buf.append(":\r\n");
+                buf.append(StringUtils.toString(entry.getValue()));
             }
+        }
 
-            buf.append("\r\n(");
-            buf.append(i++);
-            buf.append(") ");
-            buf.append(entry.getKey());
-            buf.append(":\r\n");
-            buf.append(StringUtils.toString(entry.getValue()));
+        if (i == 1) {
+            buf.append(", no related exception was found, please check whether related SPI module is missing.");
         }
         return new IllegalStateException(buf.toString());
     }
 
     @SuppressWarnings("unchecked")
     private T createExtension(String name, boolean wrap) {
-        // 获得拓展名对应的拓展实现类
         Class<?> clazz = getExtensionClasses().get(name);
-        if (clazz == null) {
+        if (clazz == null || unacceptableExceptions.contains(name)) {
             throw findException(name);
         }
         try {
-            // 从缓存中，获得拓展对象。
             T instance = (T) EXTENSION_INSTANCES.get(clazz);
             if (instance == null) {
-                // 当缓存不存在时，创建拓展对象，并添加到缓存中。
-                EXTENSION_INSTANCES.putIfAbsent(clazz, clazz.newInstance());
+                EXTENSION_INSTANCES.putIfAbsent(clazz, clazz.getDeclaredConstructor().newInstance());
                 instance = (T) EXTENSION_INSTANCES.get(clazz);
             }
-            // 注入依赖的属性
             injectExtension(instance);
 
 
             if (wrap) {
 
-                // 创建 Wrapper 拓展对象
                 List<Class<?>> wrapperClassesList = new ArrayList<>();
                 if (cachedWrapperClasses != null) {
                     wrapperClassesList.addAll(cachedWrapperClasses);
@@ -813,19 +711,15 @@ public class ExtensionLoader<T> {
                 if (method.getAnnotation(DisableInject.class) != null) {
                     continue;
                 }
-                // 获得属性的类型
                 Class<?> pt = method.getParameterTypes()[0];
                 if (ReflectUtils.isPrimitives(pt)) {
                     continue;
                 }
 
                 try {
-                    // 获得属性
                     String property = getSetterProperty(method);
-                    // 获得属性值
                     Object object = objectFactory.getExtension(pt, property);
                     if (object != null) {
-                        // 设置属性值
                         method.invoke(instance, object);
                     }
                 } catch (Exception e) {
@@ -881,21 +775,13 @@ public class ExtensionLoader<T> {
         return getExtensionClasses().get(name);
     }
 
-    /**
-     * 获得拓展实现类数组
-     *
-     * @return 拓展实现类数组
-     */
     private Map<String, Class<?>> getExtensionClasses() {
-        // 从缓存中，获得拓展实现类数组
         Map<String, Class<?>> classes = cachedClasses.get();
         if (classes == null) {
             synchronized (cachedClasses) {
                 classes = cachedClasses.get();
                 if (classes == null) {
-                    // 从配置文件中，加载拓展实现类数组
                     classes = loadExtensionClasses();
-                    // 设置到缓存中
                     cachedClasses.set(classes);
                 }
             }
@@ -906,21 +792,16 @@ public class ExtensionLoader<T> {
     /**
      * synchronized in getExtensionClasses
      */
-    /**
-     * 加载拓展实现类数组
-     *
-     * 无需声明 synchronized ，因为唯一调用该方法的 {@link #getExtensionClasses()} 已经声明。
-     * @return 拓展实现类数组
-     */
     private Map<String, Class<?>> loadExtensionClasses() {
         cacheDefaultExtensionName();
 
         Map<String, Class<?>> extensionClasses = new HashMap<>();
 
         for (LoadingStrategy strategy : strategies) {
-            // 从配置文件中，加载拓展实现类数组
-            loadDirectory(extensionClasses, strategy.directory(), type.getName(), strategy.preferExtensionClassLoader(), strategy.overridden(), strategy.excludedPackages());
-            loadDirectory(extensionClasses, strategy.directory(), type.getName().replace("org.apache", "com.alibaba"), strategy.preferExtensionClassLoader(), strategy.overridden(), strategy.excludedPackages());
+            loadDirectory(extensionClasses, strategy.directory(), type.getName(), strategy.preferExtensionClassLoader(),
+                    strategy.overridden(), strategy.excludedPackages());
+            loadDirectory(extensionClasses, strategy.directory(), type.getName().replace("org.apache", "com.alibaba"),
+                    strategy.preferExtensionClassLoader(), strategy.overridden(), strategy.excludedPackages());
         }
 
         return extensionClasses;
@@ -930,13 +811,11 @@ public class ExtensionLoader<T> {
      * extract and cache default extension name if exists
      */
     private void cacheDefaultExtensionName() {
-        // 通过 @SPI 注解，获得默认的拓展实现类名
         final SPI defaultAnnotation = type.getAnnotation(SPI.class);
         if (defaultAnnotation == null) {
             return;
         }
 
-        // 获取默认的实现key
         String value = defaultAnnotation.value();
         if ((value = value.trim()).length() > 0) {
             String[] names = NAME_SEPARATOR.split(value);
@@ -954,16 +833,13 @@ public class ExtensionLoader<T> {
         loadDirectory(extensionClasses, dir, type, false, false);
     }
 
-    // 从一个配置文件中，加载拓展实现类数组。
     private void loadDirectory(Map<String, Class<?>> extensionClasses, String dir, String type,
                                boolean extensionLoaderClassLoaderFirst, boolean overridden, String... excludedPackages) {
-        // 完整的文件名
         String fileName = dir + type;
         try {
             Enumeration<java.net.URL> urls = null;
             ClassLoader classLoader = findClassLoader();
 
-            // 获得文件名对应的所有文件数组
             // try to load from ExtensionLoader's ClassLoader first
             if (extensionLoaderClassLoaderFirst) {
                 ClassLoader extensionLoaderClassLoader = ExtensionLoader.class.getClassLoader();
@@ -997,8 +873,9 @@ public class ExtensionLoader<T> {
         try {
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(resourceURL.openStream(), StandardCharsets.UTF_8))) {
                 String line;
+                String clazz = null;
                 while ((line = reader.readLine()) != null) {
-                    final int ci = line.indexOf('#');// 跳过 '#'
+                    final int ci = line.indexOf('#');
                     if (ci >= 0) {
                         line = line.substring(0, ci);
                     }
@@ -1008,14 +885,18 @@ public class ExtensionLoader<T> {
                             String name = null;
                             int i = line.indexOf('=');
                             if (i > 0) {
-                                name = line.substring(0, i).trim(); // key
-                                line = line.substring(i + 1).trim(); // value
+                                name = line.substring(0, i).trim();
+                                clazz = line.substring(i + 1).trim();
+                            } else {
+                                clazz = line;
                             }
-                            if (line.length() > 0 && !isExcluded(line, excludedPackages)) {
-                                loadClass(extensionClasses, resourceURL, Class.forName(line, true, classLoader), name, overridden);
+                            if (StringUtils.isNotEmpty(clazz) && !isExcluded(clazz, excludedPackages)) {
+                                loadClass(extensionClasses, resourceURL, Class.forName(clazz, true, classLoader), name, overridden);
                             }
                         } catch (Throwable t) {
-                            IllegalStateException e = new IllegalStateException("Failed to load extension class (interface: " + type + ", class line: " + line + ") in " + resourceURL + ", cause: " + t.getMessage(), t);
+                            IllegalStateException e = new IllegalStateException(
+                                    "Failed to load extension class (interface: " + type + ", class line: " + line + ") in " + resourceURL +
+                                            ", cause: " + t.getMessage(), t);
                             exceptions.put(line, e);
                         }
                     }
@@ -1040,36 +921,30 @@ public class ExtensionLoader<T> {
 
     private void loadClass(Map<String, Class<?>> extensionClasses, java.net.URL resourceURL, Class<?> clazz, String name,
                            boolean overridden) throws NoSuchMethodException {
-        if (!type.isAssignableFrom(clazz)) { // 判断是否为type 的实现
+        if (!type.isAssignableFrom(clazz)) {
             throw new IllegalStateException("Error occurred when loading extension class (interface: " +
                     type + ", class line: " + clazz.getName() + "), class "
                     + clazz.getName() + " is not subtype of interface.");
         }
-        // 缓存自适应拓展对象的类到 `cachedAdaptiveClass`
         if (clazz.isAnnotationPresent(Adaptive.class)) {
             cacheAdaptiveClass(clazz, overridden);
-        // 缓存拓展 Wrapper 实现类到 `cachedWrapperClasses`
         } else if (isWrapperClass(clazz)) {
             cacheWrapperClass(clazz);
         } else {
-            // 缓存拓展实现类到 `extensionClasses`
             clazz.getConstructor();
             if (StringUtils.isEmpty(name)) {
                 name = findAnnotationName(clazz);
                 if (name.length() == 0) {
-                    throw new IllegalStateException("No such extension name for the class " + clazz.getName() + " in the config " + resourceURL);
+                    throw new IllegalStateException(
+                            "No such extension name for the class " + clazz.getName() + " in the config " + resourceURL);
                 }
             }
 
-            // 获得拓展名，可以是数组，有多个拓展名
             String[] names = NAME_SEPARATOR.split(name);
             if (ArrayUtils.isNotEmpty(names)) {
-                // 缓存 @Activate 到 `cachedActivates`
                 cacheActivateClass(clazz, names[0]);
                 for (String n : names) {
-                    // 缓存到 `cachedNames`
                     cacheName(clazz, n);
-                    // 缓存拓展实现类到 `extensionClasses`
                     saveInExtensionClass(extensionClasses, clazz, n, overridden);
                 }
             }
@@ -1093,7 +968,10 @@ public class ExtensionLoader<T> {
         if (c == null || overridden) {
             extensionClasses.put(name, clazz);
         } else if (c != clazz) {
-            String duplicateMsg = "Duplicate extension " + type.getName() + " name " + name + " on " + c.getName() + " and " + clazz.getName();
+            // duplicate implementation is unacceptable
+            unacceptableExceptions.add(name);
+            String duplicateMsg =
+                    "Duplicate extension " + type.getName() + " name " + name + " on " + c.getName() + " and " + clazz.getName();
             logger.error(duplicateMsg);
             throw new IllegalStateException(duplicateMsg);
         }
@@ -1110,7 +988,8 @@ public class ExtensionLoader<T> {
             cachedActivates.put(name, activate);
         } else {
             // support com.alibaba.dubbo.common.extension.Activate
-            com.alibaba.dubbo.common.extension.Activate oldActivate = clazz.getAnnotation(com.alibaba.dubbo.common.extension.Activate.class);
+            com.alibaba.dubbo.common.extension.Activate oldActivate =
+                    clazz.getAnnotation(com.alibaba.dubbo.common.extension.Activate.class);
             if (oldActivate != null) {
                 cachedActivates.put(name, oldActivate);
             }
@@ -1163,7 +1042,6 @@ public class ExtensionLoader<T> {
             return extension.value();
         }
 
-        // 未配置拓展名，自动生成。例如，DemoFilter 为 demo 。主要用于兼容 Java SPI 的配置。
         String name = clazz.getSimpleName();
         if (name.endsWith(type.getSimpleName())) {
             name = name.substring(0, name.length() - type.getSimpleName().length());
@@ -1180,30 +1058,19 @@ public class ExtensionLoader<T> {
         }
     }
 
-    /**
-    * @return 自适应拓展类
-    */
     private Class<?> getAdaptiveExtensionClass() {
         getExtensionClasses();
         if (cachedAdaptiveClass != null) {
             return cachedAdaptiveClass;
         }
-        // 自动生成自适应拓展的代码实现，并编译后返回该类
         return cachedAdaptiveClass = createAdaptiveExtensionClass();
     }
 
-    /**
-     * 自动生成自适应拓展的代码实现，并编译后返回该类。
-     *
-     * @return 类
-     */
     private Class<?> createAdaptiveExtensionClass() {
-        // 1 自动生成自适应拓展的代码实现的字符串
         String code = new AdaptiveClassCodeGenerator(type, cachedDefaultName).generate();
-        // 2 查找类加载器
         ClassLoader classLoader = findClassLoader();
-        // 3 调用Compiler进行代码生成类的编译加载
-        org.apache.dubbo.common.compiler.Compiler compiler = ExtensionLoader.getExtensionLoader(org.apache.dubbo.common.compiler.Compiler.class).getAdaptiveExtension();
+        org.apache.dubbo.common.compiler.Compiler compiler =
+                ExtensionLoader.getExtensionLoader(org.apache.dubbo.common.compiler.Compiler.class).getAdaptiveExtension();
         return compiler.compile(code, classLoader);
     }
 
